@@ -1,5 +1,6 @@
 Upcoming:
 - Added dimensional shards to the forge:dusts tag
+- Fixed the machine infuser so that automation will put shards and machines in the right slots
 
 1.16-2.1.3:
 - Fixed a crash with the gui of the filter
